# abs-audiobook-recommender

./: .env.example  .gitignore  README.md  RECOMMENDATION_ALGO.md  pyproject.toml  series.json
docs/: RECOMMENDATION_ALGO.md  add_new_language.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  i18n.js  main.js  style.css
frontend/src/components/: BookCard.vue  NavBar.vue  SettingsModal.vue  StarRating.vue
frontend/src/locales/: de.json  en.json
frontend/src/router/: index.js
frontend/src/views/: Admin.vue  ChangePassword.vue  History.vue  Home.vue  InProgress.vue  Login.vue  RecommendSettings.vue
scripts/: install.sh  install_dependencies.sh  uninstall.sh  update.sh
web_app/: app.py  background_tasks.py  db.py  defaults.py  logger_conf.py  messages.pot  test.py  translation_keys.py  wsgi.py
web_app/models/: db.py
web_app/recommend_lib/: abs_api.py  gemini.py  llm.py  rag.py  recommender.py
web_app/recommend_lib/languages/: en.txt
web_app/recommend_lib/languages/system/: de.txt  en.txt
web_app/recommend_lib/languages/user/: de.txt
web_app/static/: in_progress.js  listening_history.js  script.js  style.css
web_app/templates/: change_password.html  in_progress.html  index.html  listening_history.html  login.html
web_app/translations/de/LC_MESSAGES/: messages.mo  messages.po
