[project]
name = "abs-audiobook-recommender"
version = "0.1.0"
description = "An audiobook recommendation system for items in your local ABS library using Google GenAI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.5",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "huggingface-hub[hf-xet]>=0.36.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
]
