[project]
name = "abs-audiobook-recommender"
version = "0.1.0"
description = "An audiobook recommendation system for items in your local ABS library using Google GenAI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.5",
    "einops>=0.8.1",
    "flask>=3.1.2",
    "flask-apscheduler>=1.13.1",
    "flask-babel>=4.0.0",
    "flask-login>=0.6.3",
    "flask-socketio>=5.5.1",
    "flask-sqlalchemy>=3.1.1",
    "gevent>=25.9.1",
    "gevent-websocket>=0.10.1",
    "huggingface-hub[hf-xet]>=0.36.0",
    "onnxruntime>=1.23.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "simple-websocket>=1.1.0",
    "tokenizers>=0.22.1",
    "transformers>=4.57.3",
    "gunicorn>=23.0.0",
]

[tool.ruff]
lint.extend-select = [
    "PTH",
    "T201",
    "T203"
]

lint.ignore = [
]

[tool.ruff.lint.per-file-ignores]
"web_app/app.py" = ["E402"]